[gd_scene load_steps=4 format=3 uid="uid://ot1hpm00j7fx"]

[ext_resource type="Script" path="res://menu.gd" id="1_0etkp"]
[ext_resource type="Texture2D" uid="uid://ea1m1rdbwjto" path="res://Assests/AwesomeepicPosterXDDDDDD.png" id="2_g8uln"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_acyw6"]

[node name="Control" type="Control"]
material = SubResource("CanvasItemMaterial_acyw6")
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0etkp")

[node name="level_1" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 167.0
offset_top = 268.0
offset_right = 225.0
offset_bottom = 299.0
text = "level 1"

[node name="level_2" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 239.0
offset_top = 270.0
offset_right = 297.0
offset_bottom = 301.0
text = "level 2"

[node name="level_3" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 314.0
offset_top = 268.0
offset_right = 372.0
offset_bottom = 299.0
text = "level 3"

[node name="level_4" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 384.0
offset_top = 268.0
offset_right = 442.0
offset_bottom = 299.0
text = "level 4"

[node name="level_5" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 164.0
offset_top = 319.0
offset_right = 222.0
offset_bottom = 350.0
text = "level 5"

[node name="level_6" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 237.0
offset_top = 320.0
offset_right = 295.0
offset_bottom = 351.0
text = "level 6"

[node name="level_7" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 309.0
offset_top = 321.0
offset_right = 367.0
offset_bottom = 352.0
text = "level 7"

[node name="level_8" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 383.0
offset_top = 324.0
offset_right = 441.0
offset_bottom = 355.0
text = "level 8"

[node name="level_9" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 159.0
offset_top = 364.0
offset_right = 217.0
offset_bottom = 395.0
text = "level 9"

[node name="level_10" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 230.0
offset_top = 368.0
offset_right = 297.0
offset_bottom = 399.0
text = "level 10"

[node name="level_11" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 310.0
offset_top = 370.0
offset_right = 377.0
offset_bottom = 401.0
text = "level 11"

[node name="level_12" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 389.0
offset_top = 369.0
offset_right = 456.0
offset_bottom = 400.0
text = "level 12"

[node name="EXIT" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 267.0
offset_top = 431.0
offset_right = 334.0
offset_bottom = 462.0
text = "EXIT TO HOME"

[node name="easy_mode" type="CheckButton" parent="."]
visible = false
top_level = true
layout_mode = 0
offset_left = 724.0
offset_top = 363.0
offset_right = 783.0
offset_bottom = 395.0
text = "goo goo gagga 
i want my mommy "

[node name="music" type="CheckButton" parent="."]
top_level = true
layout_mode = 0
offset_left = 826.0
offset_top = 322.0
offset_right = 920.0
offset_bottom = 353.0
button_pressed = true
text = "music"

[node name="TextureRect" type="TextureRect" parent="."]
process_priority = -4
show_behind_parent = true
light_mask = 0
custom_minimum_size = Vector2(2, 2)
layout_mode = 0
offset_right = 1440.0
offset_bottom = 960.0
texture = ExtResource("2_g8uln")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(723, 480)
zoom = Vector2(1.255, 1.255)

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="level_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="level_4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="EXIT" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="music" to="." method="_on_music_toggled"]
